# hassub

./: LICENSE  README.md  hassub.cabal
app/: Main.hs
src/: Appearance.hs  Config.hs  Download.hs  File.hs  Hassub.hs  Login.hs  OpenSubtitles.hs  Options.hs  Search.hs  Utils.hs
src/OpenSubtitles/: API.hs  Download.hs  Login.hs  Logout.hs  Search.hs
