name:                hassub
version:             1.0.0
synopsis:            A command-line subtitle downloader
homepage:            https://github.com/danferreira/hassub#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Ferreira
maintainer:          djf989@gmail.com
copyright:           2017 Daniel Ferreira
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hassub
                      ,File
                      ,Appearance
                      ,OpenSubtitles.API
                      ,OpenSubtitles.Login
                      ,OpenSubtitles.Search
                      ,OpenSubtitles.Download
  build-depends:       base >= 4.7 && < 5
                      ,ansi-terminal
                      ,base64-bytestring
                      ,binary
                      ,bytestring
                      ,directory
                      ,haxr
                      ,hex
                      ,MissingH
                      ,zlib
  default-language:    Haskell2010

executable hassub-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,directory
                      ,docopt
                      ,hassub
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danferreira/hassub
