name: hassub
version: 1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: 2017 Daniel Ferreira
maintainer: djf989@gmail.com
homepage: https://github.com/danferreira/hassub#readme
synopsis: A command-line subtitle downloader
category: Console
author: Daniel Ferreira
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/danferreira/hassub

library
    exposed-modules:
        Hassub
        File
        Appearance
        OpenSubtitles.API
        OpenSubtitles.Login
        OpenSubtitles.Search
        OpenSubtitles.Download
        OpenSubtitles.Logout
    build-depends:
        base >=4.7 && <5,
        ansi-terminal -any,
        base64-bytestring -any,
        binary -any,
        bytestring -any,
        directory -any,
        haxr -any,
        hex -any,
        MissingH -any,
        zlib -any
    default-language: Haskell2010
    hs-source-dirs: src

executable hassub-exe
    main-is: Main.hs
    build-depends:
        base -any,
        directory -any,
        docopt -any,
        hassub -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
